--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>HUINCHO QUISPE WILMER AGUSTIN</h2>
     <P id="genero">MASCULINO - 30 AÑOS</P>
     <div id ="foto">
-        <img src="assets/wilmer.png" alt="">
+        <img src="img/foto.png" alt="">
     </div>
     <p><strong>AREA: </strong>SOPORTE TECNICO</p>
     <div id="Social-media">
@@ -35,7 +35,7 @@
            por mi habilidad para comunicarse eficazmente con usuario y equipos tecnicos</p>
         <h1>EXPERIENCIA PROFESIONAL</h1>
         <div class="academia">
-            
+
         </div>
 
     </div>
